# decision-logger

./: .gitignore  README.md  pyproject.toml
examples/: sample-decision-log.md
src/decision_logger/: __main__.py  cli.py  config.py
src/decision_logger/collectors/: base.py  claude_collector.py  git_collector.py  shell_collector.py
src/decision_logger/inference/: openai_client.py  prompts.py  schema.py
src/decision_logger/models/: events.py
src/decision_logger/processing/: redactor.py  timeline.py
src/decision_logger/renderers/: json_renderer.py  markdown.py
src/decision_logger/utils/: shell_setup.py
tests/: conftest.py
tests/test_processing/: test_redactor.py  test_timeline.py
